@@ -24,9 +24,12 @@
 class Routing
 {
  public:
-  Routing(unsigned d_slots,unsigned s_slots);
+  Routing(unsigned d_slots,unsigned s_slots,
+	  unsigned gpis=0,unsigned gpos=0);
   unsigned dstSlots() const;
   unsigned srcSlots() const;
+  unsigned gpis() const;
+  unsigned gpos() const;
   QString hostName() const;
   QHostAddress nicAddress() const;
   void setNicAddress(const QHostAddress &addr);
@@ -50,6 +53,12 @@ class Routing
   QString dstName(int slot) const;
   void setDstName(int slot,const QString &str);
   int dstMeterLevel(int slot,int chan) const;
+  bool gpiState(int gpi,int line) const;
+  bool gpiStateBySlot(int slot,int line) const;
+  void setGpi(int gpi,int line,bool state,bool pulse);
+  bool gpoState(int gpo,int line) const;
+  bool gpoStateBySlot(int slot,int line) const;
+  void setGpo(int gpo,int line,bool state,bool pulse);
   unsigned nicQuantity() const;
   QHostAddress nicAddress(unsigned n);
   QHostAddress nicNetmask(unsigned n);
@@ -69,12 +78,16 @@ class Routing
   float src_meter[SWITCHYARD_MAX_SLOTS][SWITCHYARD_MAX_CHANNELS];
   uint32_t dst_addr[SWITCHYARD_MAX_SLOTS];
   float dst_meter[SWITCHYARD_MAX_SLOTS][SWITCHYARD_MAX_CHANNELS];
+  static unsigned livewireNumber(const QHostAddress &addr);
   static QString dumpAddress(uint32_t addr);
 
  private:
+  int GetSlotByGpio(int gpio) const;
   void LoadInterfaces();
   QString sy_src_names[SWITCHYARD_MAX_SLOTS];
   QString sy_dst_names[SWITCHYARD_MAX_SLOTS];
+  std::vector<bool> sy_gpi_states;
+  std::vector<bool> sy_gpo_states;
   std::vector<QHostAddress> sy_nic_addresses;
   std::vector<QHostAddress> sy_nic_netmasks;
   std::vector<QString> sy_nic_devices;
